refactor(security): harden security, simplify architecture, add 67 tests
Security hardening:
- Add TooManyRequestsException handler (429) in GlobalExceptionHandler
- Fix LoginRateLimiter memory leak (remove stale IP entries)
- Add SecurityPropertiesValidator to reject default credentials in prod
- Add security headers (X-Content-Type-Options, X-Frame-Options, HSTS)
- Make CORS origins configurable via APP_CORS_ORIGINS env var

Architecture simplification:
- Remove PersonCommandHandler (passthrough layer with no logic)
- Remove FindByIdCommand, use @PathVariable UUID id directly
- Replace @Autowired field injection with constructor injection
- Replace @Data on Person with @Getter/@Setter + id-only equals/hashCode
- Move @EnableCaching to dedicated CacheConfig (fixes @WebMvcTest)

Performance:
- Migrate cache from ConcurrentMapCacheManager to Caffeine (TTL 10m, max 1000)

Dependencies:
- Update Lombok 1.18.42 → 1.18.44
- Add Caffeine cache dependency
- Migrate to Spring Boot 4 test modules (webmvc-test, restclient-test, security-test)
- Replace @MockBean with @MockitoBean (Spring Framework 7)

Tests: 67 tests across 14 suites (unit, integration, security, validation)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>